# chatroom-server-v2

./: .gitignore  CMakeLists.txt  README.md
configs/: server.yaml
docs/: architecture.md
include/chatroom/app/: server_app.hpp
include/chatroom/common/: config.hpp  logger.hpp  result.hpp  types.hpp
include/chatroom/concurrency/: blocking_task_queue.hpp  thread_pool.hpp
include/chatroom/net/: acceptor.hpp  connection.hpp  epoll_poller.hpp  framer.hpp  reactor.hpp
include/chatroom/protocol/: action.hpp  envelope.hpp  json_message_parser.hpp
include/chatroom/service/: auth_service.hpp  direct_message_service.hpp  group_message_service.hpp  offline_delivery_service.hpp
include/chatroom/session/: connection_registry.hpp  session_manager.hpp
include/chatroom/storage/: group_repository.hpp  message_repository.hpp  mysql_client.hpp  offline_message_repository.hpp  user_repository.hpp
src/: main.cpp
src/app/: server_app.cpp
src/common/: config.cpp  logger.cpp
src/concurrency/: blocking_task_queue.cpp  thread_pool.cpp
src/net/: acceptor.cpp  connection.cpp  epoll_poller.cpp  framer.cpp  reactor.cpp
src/protocol/: json_message_parser.cpp
src/service/: auth_service.cpp  direct_message_service.cpp  group_message_service.cpp  offline_delivery_service.cpp
src/session/: connection_registry.cpp  session_manager.cpp
src/storage/: group_repository.cpp  message_repository.cpp  mysql_client.cpp  offline_message_repository.cpp  user_repository.cpp
tests/: CMakeLists.txt  smoke_test.cpp
